Fix for overflowing content

--- a/src/components/tree-x/tree-x.scss
+++ b/src/components/tree-x/tree-x.scss
@@ -7,7 +7,6 @@ ch-tree-x {
   & > .ch-tree-x-container {
     position: absolute;
     inset: 0;
-    min-width: max-content;
   }
 
   // Reset useful droppable areas
